fixed the bar chart and info box layout from overlapping when bug tested

--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ m {
 }
 
 #map {
-    height: 500px;
+    height: 400px;
     width: 100%;
     margin-bottom: 20px;
 }
